add to README and html layout

--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
     <header>Weather Dashboard</header>
 
     <!--search and history buttons-->
+    <div>
+        <div>Search for a City:</div>
+        <input type="text">
+        <button>Search</button>
 
+    </div>
     <!--main weather display-->
+    <div>
+        ##chosen city forecast
+    </div>
+
+    <div>
+        5-Day Forecast:
+    </div>
+    <div></div>
 
     <!--five day forecast-->
 
