--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 
     <!--search and history buttons-->
     <div>
-        <div>Search for a City:</div>
+        <h1>Search for a City:</h1>
         <input type="text">
-        <button>Search</button>
+        <button id="citySearch">Search</button>
 
     </div>
     <!--main weather display-->
-    <div>
+    <h2>
         ##chosen city forecast
-    </div>
+    </h2>
 
-    <div>
+    <h3>
         5-Day Forecast:
-    </div>
+    </h3>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
     <div></div>
 
     <!--five day forecast-->
