--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
+
     <!--header-->
     <header>Weather Dashboard</header>
 
@@ -23,6 +25,8 @@
         ##chosen city forecast
     </h2>
 
+   
+    <!--five day forecast-->
     <h3>
         5-Day Forecast:
     </h3>
@@ -32,9 +36,8 @@
     <div></div>
     <div></div>
 
-    <!--five day forecast-->
-
     <!--scripts-->
     <script src="./script.js"></script>
+    
 </body>
 </html>
